<resources>
    <string name="app_name">NIT3213FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">Welcome</string>
    <string name="login_subtitle">Sign in with your student details</string>
    <string name="username">Student ID (without s)</string>
    <string name="password">First Name</string>
    <string name="login_button">Login</string>
    <string name="login_error">Login failed. Please check your credentials.</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_error">Unable to load dashboard data.</string>
    <string name="details_title">Details</string>
</resources>